<resources>
    <string name="app_name">Take_out_App</string>
    <string name="tv_Login_ID">账号:</string>
    <string name="tv_Login_Password">密码:</string>
    <string name="hint_user_id">请输入手机号</string>
    <string name="hint_user_password">请输入密码</string>
    <string name="hint_user_password_again">请再次输入密码</string>
    <string name="btn_Login">登陆</string>
    <string name="btn_Register">注册</string>
    <string name="tv_forget">忘记密码</string>
    <string name="tv_Register">立即注册</string>
    <string name="hint_verify">输入右侧验证码</string>
    <string name="btn_verify">获取验证码</string>
    <string name="btn_match">验证</string>
    <string name="tv_user_name">用户名:</string>
    <string name="user_sex">性别:</string>
    <string name="tv_user_address">地址:</string>
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_user_address">请输入地址</string>
    <string name="tv_sex">性别:</string>
    <string name="radio_btn_male">男</string>
    <string name="radio_btn_female">女</string>
    <string name="btn_user_info">确认个人信息</string>
    <string name="title_activity_user_menu">UserMenuActivity</string>
    <string name="title_takeout">外卖</string>
    <string name="title_indent">订单</string>
    <string name="title_user">用户</string>
    <string name="hint_search">输入商家信息</string>
    <string name="btn_search">搜索</string>
    <string name="rbtn_food">美食</string>
    <string name="rbtn_fastfood">小吃</string>
    <string name="rbtn_drink">饮品</string>
    <string name="rbtn_fruit">水果</string>
    <string name="rbtn_hot">热门</string>
    <string name="hint_resID">请输入商家账号</string>
    <string name="btn_return">返回</string>
    <string name="btn_ok">确认</string>

</resources>
