<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="完善个人信息"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/tv_user_name"
            android:textSize="25sp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"></TextView>

        <EditText
            android:id="@+id/et_user_name"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"
            android:hint="@string/hint_user_name"
            android:background="@android:drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/tv_sex"
            android:textSize="25sp"
            android:layout_marginLeft="25dp"
            android:layout_width="75dp"
            android:layout_height="wrap_content"></TextView>

        <RadioButton
            android:id="@+id/radio_btn_male"
            android:text="@string/radio_btn_male"
            android:textSize="25sp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"></RadioButton>

        <RadioButton
            android:id="@+id/radio_btn_female"
            android:text="@string/radio_btn_female"
            android:textSize="25sp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"></RadioButton>

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

    <TextView
        android:text="@string/tv_user_address"
        android:textSize="25sp"
        android:layout_width="75dp"
        android:layout_marginLeft="25dp"
        android:layout_height="wrap_content"></TextView>

    <EditText
        android:id="@+id/et_user_address"
        android:hint="@string/hint_user_address"
        android:layout_marginLeft="10dp"
        android:textSize="25sp"
        android:background="@android:drawable/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></EditText>

    </LinearLayout>

    <Button
        android:id="@+id/btn_user_info"
        android:text="@string/btn_user_info"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Button>

</LinearLayout>