<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/tv_Login_ID"></TextView>

        <EditText
            android:id="@+id/et_find_id"
            android:hint="@string/hint_user_id"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="应有验证码输入"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

    </LinearLayout>

    <Button
        android:id="@+id/btn_match"
        android:text="@string/btn_match"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Button>



</LinearLayout>