<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="商家登录"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_dashboard_black_24dp"
            android:layout_width="50dp"
            android:layout_height="match_parent"></ImageView>
        <EditText
            android:id="@+id/et_res_login_ID"
            android:hint="@string/hint_resID"
            android:background="@android:drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_dashboard_black_24dp"
            android:layout_width="50dp"
            android:layout_height="match_parent"></ImageView>
        <EditText
            android:id="@+id/et_res_login_Password"
            android:hint="@string/hint_user_password"
            android:background="@android:drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_res_login"
            android:text="@string/btn_Login"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5sp">

        <Button
            android:id="@+id/btn_res_login_return"
            android:text="@string/btn_return"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"></Button>

    </LinearLayout>




</LinearLayout>
