<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:text="账号："
            android:textSize="25sp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:id="@+id/tv_change_password_userID"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>



    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_change_password_1"
            android:background="@android:drawable/edit_text"
            android:hint="@string/hint_user_password"
            android:textSize="25sp"
            android:maxLength="16"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_change_password_2"
            android:background="@android:drawable/edit_text"
            android:hint="@string/hint_user_password_again"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_change_password_ok"
            android:textSize="25sp"
            android:text="@string/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"></Button>

        <Button
            android:id="@+id/btn_change_password_return"
            android:textSize="25sp"
            android:text="@string/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"></Button>


    </LinearLayout>


</LinearLayout>