<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">





    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:longClickable="true"
            android:orientation="vertical">


            <ViewFlipper
                android:id="@+id/viewFlipper"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:autoStart="true"
                android:flipInterval="6000"
                android:inAnimation="@anim/right_in"
                android:outAnimation="@anim/right_out"></ViewFlipper>

            <RadioGroup
                android:id="@+id/radio_group_type"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbtn_food"
                    android:text="@string/rbtn_food"
                    android:textSize="15sp"
                    android:drawableTop="@drawable/ic_home_black_24dp"
                    style="@style/MyRadioButtonStyle"></RadioButton>

                <RadioButton
                    android:id="@+id/rbtn_fastfood"
                    android:text="@string/rbtn_fastfood"
                    android:textSize="15sp"
                    android:drawableTop="@drawable/ic_home_black_24dp"
                    style="@style/MyRadioButtonStyle"></RadioButton>

                <RadioButton
                    android:id="@+id/rbtn_drink"
                    android:text="@string/rbtn_drink"
                    android:textSize="15sp"
                    android:drawableTop="@drawable/ic_home_black_24dp"
                    style="@style/MyRadioButtonStyle"></RadioButton>

                <RadioButton
                    android:id="@+id/rbtn_fruit"
                    android:text="@string/rbtn_fruit"
                    android:textSize="15sp"
                    android:drawableTop="@drawable/ic_home_black_24dp"
                    style="@style/MyRadioButtonStyle"></RadioButton>

                <RadioButton
                    android:id="@+id/rbtn_hot"
                    android:text="@string/rbtn_hot"
                    android:textSize="15sp"
                    android:drawableTop="@drawable/ic_home_black_24dp"
                    style="@style/MyRadioButtonStyle"></RadioButton>

            </RadioGroup>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">

                <!--<ImageView
                    android:src="@drawable/ic_home_black_24dp"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"></ImageView>

                <EditText
                    android:background="@android:drawable/edit_text"
                    android:id="@+id/et_search"
                    android:hint="@string/hint_search"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"></EditText>

                <Button
                    android:id="@+id/btn_search"
                    android:text="@string/btn_search"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"></Button>-->
                <SearchView
                    android:queryHint="请输入搜索内容"

                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>


            </LinearLayout>


            <com.example.take_out_app.MyListView
                android:layout_marginTop="10dp"
                android:id="@+id/lv_takeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ></com.example.take_out_app.MyListView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>



